# jam-compiler

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: jam-parse.h  jam-parser.tab.cpp  jam-parser.tab.hh  table.h  tree.cpp  tree.h  utilities.cpp  utilities.h
src/lexer/: CMakeLists.txt  jam-lexer.l  jam_lexer.l
src/parser/: CMakeLists.txt  jam-parser.tab.cc  jam-parser.tab.hh  jam-parser.y
src/table/: table.cpp  table.h
src/tree/: tree.cpp  tree.h
src/utilities/: utilities.cpp  utilities.h
tests/: CMakeLists.txt  lexer_tests.cpp  parser_tests.cpp  table_tests.cpp  typesystem_tests.cpp  utilities_tests.cpp
tests/lexer_test_examples/: good_test1.expected  good_test1.jam  good_test2.expected  good_test2.jam  good_test3.expected  good_test3.jam  good_test4.expected  good_test4.jam
tests/parser_test_examples/: good_test1.jam  good_test2.jam  good_test3.jam
tests/typesystem_test_examples/: bad_test1.jam  bad_test2.jam  bad_test3.jam  bad_test4.jam  bad_test5.jam  good_test1.jam  good_test2.jam  good_test3.jam  good_test4.jam  good_test5.jam  good_test6.jam  good_test7.jam
